<resources>
    <string name="app_name">Project5_2</string>
    <string name="result">계산결과 : </string>
    <string name="add">더하기</string>
    <string name="sub">빼기</string>
    <string name="mul">곱하기</string>
    <string name="div">나누기</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="hint1">숫자1 입력</string>
    <string name="hint2">숫자2 입력</string>

</resources>