<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TableRow android:layout_weight="1">

        <EditText
            android:id="@+id/Edit1"
            android:layout_weight="1"
            android:hint="@string/hint1"
            android:inputType="number"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <EditText
            android:id="@+id/Edit2"
            android:layout_weight="1"
            android:hint="@string/hint2"
            android:inputType="number"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/BtnNum0"
            android:layout_weight="1"
            android:text="@string/num0"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/BtnNum1"
            android:layout_weight="1"
            android:text="@string/num1"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/BtnNum2"
            android:layout_weight="1"
            android:text="@string/num2"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/BtnNum3"
            android:layout_weight="1"
            android:text="@string/num3"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/BtnNum4"
            android:layout_weight="1"
            android:text="@string/num4"
            android:layout_margin="5dp"/>

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/BtnNum5"
            android:layout_weight="1"
            android:text="@string/num5"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/BtnNum6"
            android:layout_weight="1"
            android:text="@string/num6"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/BtnNum7"
            android:layout_weight="1"
            android:text="@string/num7"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/BtnNum8"
            android:layout_weight="1"
            android:text="@string/num8"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/BtnNum9"
            android:layout_weight="1"
            android:text="@string/num9"
            android:layout_margin="5dp"/>

    </TableRow>


    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/BtnAdd"
            android:layout_weight="1"
            android:text="@string/add"
            android:layout_margin="5dp"/>
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/BtnSub"
            android:layout_weight="1"
            android:text="@string/mul"
            android:layout_margin="5dp"/>
    </TableRow>

    <TableRow
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnMul"
            android:layout_weight="1"
            android:text="@string/mul"
            android:layout_margin="5dp"/>
    </TableRow>

    <TableRow
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnDiv"
            android:layout_weight="1"
            android:text="@string/div"
            android:layout_margin="5dp"/>
    </TableRow>

    <TableRow
        android:layout_weight="1">

        <TextView
            android:id="@+id/TextResult"
            android:layout_weight="1"
            android:text="@string/result"
            android:textColor="#ff0000"
            android:textSize="20sp"/>
    </TableRow>
</TableLayout>